<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:id="@+id/airbnb_label_login"
        android:text="@string/airbnb_label_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Spinner
        android:id="@+id/register_spinner_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rx_spinner_countries"
        />

    <EditText
        android:id="@+id/register_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"/>

    <Button
        android:id="@+id/register_button_sendsms"
        android:text="@string/register_button_sendsms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </LinearLayout>
</layout>
